# zen-wisdom-explorer

./: README.md  render.yaml
backend/: .env.example  README.md  pyproject.toml  smoke_test.py
backend/app/: __init__.py  config.py  main.py  metrics.py  models.py  safety.py
backend/app/services/: embeddings.py  llm.py  pinecone_client.py
backend/tests/: test_api.py  test_retrieval.py
mobile/: .env.example  App.tsx  app.json  package-lock.json  package.json
mobile/src/: api.ts  config.ts  format.ts  theme.ts  types.ts
mobile/src/components/: ChatInput.tsx  Drawer.tsx  Header.tsx  LanguageToggle.tsx  MessageBubble.tsx  MessageList.tsx  Welcome.tsx
mobile/src/voice/: locales.ts  tts.ts  useSpeechToText.ts
